syntax = "proto3";

package biliDanmaku;

option java_package = "com.duzhaokun123.bilibilihd.proto";
option java_outer_classname = "BiliDanmaku";

message DanmakuElem {
  int64 id = 1;
  int32 progress = 2;
  int32 mode = 3;
  int32 fontzsie = 4;
  uint32 color = 5;
  string midHash = 6;
  string content = 7;
  int64 ctime = 8;
  int32 weight = 9;
  string action = 10;
  int32 pool = 11;
  string idStr = 12;
}

message DmSegMobileReply {
  repeated DanmakuElem elems = 1;
}